<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/map_config_category_title">

        <ListPreference
            android:key="map_type"
            android:title="@string/map_type_preference_title"
            android:summary="@string/map_type_preference_summary"
            android:entries="@array/map_type_entries"
            android:entryValues="@array/map_type_values"
            android:defaultValue="normal" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/config_category_title">

        <ListPreference
            android:key="language"
            android:title="@string/language_preference_title"
            android:summary="@string/language_preference_summary"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="es" />

    </PreferenceCategory>

</PreferenceScreen>
