<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_mapa"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/mapa" />
        <item
        android:id="@+id/nav_listadefarmacias"
        android:icon="@drawable/listafarmacia"
        android:title="@string/listadefarmacias" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/config"
            android:title="@string/configuracion" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/salirimg"
            android:title="@string/salir" />
    </group>
</menu>