<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mapa">

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.softulp.exploradordefarmacias.ui.mapa.MapaFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_listadefarmacias"
        android:name="com.softulp.exploradordefarmacias.ui.listaDeFarmacias.ListaDeFarmaciasFragment"
        android:label="@string/listadefarmacias"
        tools:layout="@layout/fragment_listadefarmacias" >

        <action
            android:id="@+id/action_nav_listadefarmacias_to_farmaciaDetailsFragment"
            app:destination="@id/farmaciaDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.softulp.exploradordefarmacias.ui.configuracion.ConfiguracionFragment"
        android:label="@string/configuracion"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.softulp.exploradordefarmacias.ui.salir.SalirFragment"
        android:label="@string/salir"
        tools:layout="@layout/fragment_salir" />
    <fragment
        android:id="@+id/farmaciaDetailsFragment"
        android:name="com.softulp.exploradordefarmacias.ui.listaDeFarmacias.FarmaciaDetailsFragment"
        android:label="activity_farmacia_details"
        tools:layout="@layout/activity_farmacia_details" >
        <action
            android:id="@+id/action_farmaciaDetailsFragment_to_nav_listadefarmacias"
            app:destination="@id/nav_listadefarmacias" />
    </fragment>
</navigation>